syntax = "proto3";

// Doc: https://developers.google.com/protocol-buffers/docs/proto3

package com.bdps.organization;

option java_package = "com.bdps.organization";
option java_outer_classname = "OrganizationProto";
// option java_multiple_files = true; 这个会将类分开，避免跟model重名可以不分开，如果太大可以考虑分开
import "validate/validate.proto";

message Organization {
    int32 organizationId = 1;
    int32 regionId = 2;
    int32 parentOrganizationId = 3;
    string name = 4;
    string manager = 5;
    string managerTel = 6;
    string operationArea = 7;
    string operationMethod = 8;
    string address = 9;
    string streetNo = 10;
    int32 type = 11;
}

message Organizations {
    int32 page = 1;
    int32 limit = 2;
    int32 count = 3;
    repeated Organization nodes = 4;
}

message AddOrganizationRequest {
    int32 regionId = 2;
    int32 parentOrganizationId = 3;
    string name = 4;
    string manager = 5;
    string managerTel = 6;
    string operationArea = 7;
    string operationMethod = 8;
    string address = 9;
    string streetNo = 10;
    int32 type = 11;
}


message ListOrganizationRequest {
    int32 page = 1;
    int32 limit = 2;
}

message UpdateOrganizationRequest {
    int32 organizationId = 1;
    int32 regionId = 2;
    int32 parentOrganizationId = 3;
    string name = 4;
    string manager = 5;
    string managerTel = 6;
    string operationArea = 7;
    string operationMethod = 8;
    string address = 9;
    string streetNo = 10;
    int32 type = 11;
}

message GetOrganizationRequest {
    int32 organizationId = 1;
}

message DeleteOrganizationRequest {
    int32 organizationId = 1;
}

service OrganizationService {
    rpc AddOrganization (AddOrganizationRequest) returns (Organization) {
    };
    rpc ListOrganization (ListOrganizationRequest) returns (Organizations) {
    };
    rpc UpdateOrganization (UpdateOrganizationRequest) returns (Organization) {
    };
    rpc DeleteOrganization (DeleteOrganizationRequest) returns(Organization){
    };
    rpc GetOrganization (GetOrganizationRequest) returns (Organization) {
    };
}